<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Philosopher Stone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_activity_map_scene">MapScene</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory_scene">InventoryScene</string>
    <string name="title_activity_mix_item_scene">MixItemScene</string>
    <string name="title_activity_tradebox_scene">TradeboxScene</string>
    <string name="title_activity_find_offer_scene">FindOfferScene</string>

</resources>
