<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#ffff0c18"
        android:textSize="35sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/pstone"
        android:layout_marginBottom="160dp"
        android:layout_above="@+id/signupButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="42dp"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/signupButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/username"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/loginButton"
            android:src="@drawable/enterbutton2"
            android:layout_gravity="center_horizontal"
            android:onClick="loginPlayer" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/signupButton"
        android:src="@drawable/registerbutton4"
        android:onClick="signupPlayer"
        android:layout_above="@+id/port"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:id="@+id/port"
        android:hint="@string/port"
        android:textColorHint="#A0A0A0"
        android:inputType="number"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/host"
        android:hint="@string/host"
        android:textColorHint="#A0A0A0"
        android:layout_toLeftOf="@+id/port"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>


</RelativeLayout>